Maltes Vorschläge umgesetzt und Übersicht angepasst

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          data-separator-notes="^Note:"
          data-charset="iso-8859-15">
 			 	</section>
-				<section data-markdown="02_freifunk_generell.md"
+				<section data-markdown="02_freifunk.md"
          data-separator="^\n\n\n"
          data-separator-vertical="^\n\n"
          data-separator-notes="^Note:"
@@ -87,7 +87,8 @@
          data-separator-notes="^Note:"
          data-charset="iso-8859-15">
 			 	</section>
-
+				<section data-background-iframe="http://bremen.freifunk.net/meshviewer">
+			 	</section>
 			</div>
 
 		</div>
