--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          data-separator-notes="^Note:"
          data-charset="iso-8859-15">
 			 	</section>
-				<section data-background-iframe="http://bremen.freifunk.net/meshviewer">
+				<section data-background-iframe="http://bremen.freifunk.net/meshviewer/">
 			 	</section>
 			</div>
 
